update css select-label

--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
 
       <!-- input  -->
       <div class="input mb-4">
-        <!-- <select id="countrySelect" class="form-select">
+        <!-- <label for="countrySelect">Şehir Seç:</label>
+        <select id="countrySelect" class="form-select">
           <option value="">Bir ülke seçin...</option>
         </select> -->
+        <label for="countrySelect" class="select-label">Şehir Seç:</label>
         <select id="countrySelect" class="form-select" multiple size="8">
           <option value="">Bir ülke seçin...</option>
         </select>
