select-label update

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <select id="countrySelect" class="form-select">
           <option value="">Bir ülke seçin...</option>
         </select> -->
-        <label for="countrySelect" class="select-label">Şehir Seç:</label>
+        <label for="countrySelect" class="select-label">Ülke Seç:</label>
         <select id="countrySelect" class="form-select" multiple size="8">
           <option value="">Bir ülke seçin...</option>
         </select>
